<resources>
    <string name="app_name">SESSP</string>
    <string name="filtrar_dados">Filtrar Dados</string>
    <string name="ver_tudo">Ver Todos os Dados</string>
    <string name="selecionaFiltros">Selecione os Filtros que deseje aplicar:</string>
    <string name="cnpj">CNPJ</string>
    <string name="conveniado">Conveniado</string>
    <string name="municipio">Município</string>
    <string name="drs">DRS</string>
    <string name="programa">Programa</string>
    <string name="palavraChave">Palavra Chave</string>
    <string name="natureza">Natureza</string>
    <string name="baseMensal">Base Mensal por Ano</string>
    <string name="pagoAno">Pago por Ano</string>
    <string name="dataPublicacao">Data de publicação</string>
    <string name="selecionarTodos">Selecionar Todos</string>
    <string name="todosSelecionado">Todos Selecionado</string>
    <string name="nenhumSelecionado">Nenhum Selecionado</string>
    <string name="selecionado">Selecionado</string>
    <string name="naoselecionado">Não Selecionado</string>
    <string name="buscarcnpj">Burcar por CNPJ</string>
    <string name="buscarconveniado">Burcar por Conveniado</string>
    <string name="buscarmunicipio">Buscar por Município</string>
    <string name="buscarprograma">Buscar por Programa</string>
    <string name="buscarpalavrachave">Buscar por Palavra Chave</string>
    <string name="buscarnatureza">Buscar por Natureza</string>
    <string name="buscardrs">Buscar por DRS</string>
    <string name="buscar">Buscar</string>
    <string name="proximo">Próximo</string>
    <string name="aplicar">Aplicar</string>
    <string name="tituloalerta">Confirmar</string>
    <string name="cnpjmensagem">CNPJ Selecionado: </string>
    <string name="conveniadomensagem">Conveniado Selecionado: </string>
    <string name="municipiomensagem">Município Selecionado: </string>
    <string name="drsmensagem">DRS Selecionado: </string>
    <string name="programamensagem">Programa Selecionado: </string>
    <string name="naturezamensagem">Natureza Selecionado: </string>
    <string name="palavrachavemensagem">Palavra Chave Selecionada: </string>
    <string name="prosseguir">Deseja Prosseguir ?</string>
    <string name="aplicarmensagem">Deseja Aplicar os filtros ?</string>
    <string name="sim">Sim</string>
    <string name="nao">Não</string>
    <string name="naoencontrado">Não há resultados para sua busca</string>
    <string name="title_activity_resultado">ResultadoActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
</resources>
