<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="sessp.com.sessp1.PalavraChaveActivity">

    <TextView
        android:id="@+id/textViewPalavraChave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="24dp"
        android:text="@string/palavraChave"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPalavraChave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="18dp"
        android:layout_marginTop="20dp"
        android:ems="10"
        android:hint="@string/buscarpalavrachave"
        android:inputType="text"
        app:layout_constraintEnd_toStartOf="@+id/buttonBuscarPalavraChave"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewPalavraChave" />

    <Button
        android:id="@+id/buttonBuscarPalavraChave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:layout_marginEnd="15dp"
        android:layout_marginTop="38dp"
        android:text="@string/buscar"
        app:layout_constraintBottom_toTopOf="@+id/listViewPalavraChave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/editTextPalavraChave"
        app:layout_constraintTop_toTopOf="@+id/textViewPalavraChave" />

    <ListView
        android:id="@+id/listViewPalavraChave"
        android:layout_width="356dp"
        android:layout_height="0dp"
        android:layout_marginBottom="36dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="33dp"
        android:choiceMode="singleChoice"
        android:listSelector="@color/azul"
        app:layout_constraintBottom_toTopOf="@+id/buttonAplicarPalavraChave"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPalavraChave" />

    <Button
        android:id="@+id/buttonAplicarPalavraChave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="79dp"
        android:text="@string/aplicar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/buttonProximoPalavraChave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="20dp"
        android:layout_marginEnd="76dp"
        android:text="@string/proximo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>
